# express-socket/public/swagger.json
@@ -30,6 +30,62 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"GameSessionDto": {
+				"properties": {
+					"sessionId": {
+						"type": "string"
+					},
+					"roomName": {
+						"type": "string"
+					},
+					"capacity": {
+						"type": "number",
+						"format": "double"
+					},
+					"currentNbPlayers": {
+						"type": "number",
+						"format": "double"
+					},
+					"status": {
+						"type": "string"
+					},
+					"players": {
+						"items": {},
+						"type": "array"
+					}
+				},
+				"required": [
+					"sessionId",
+					"roomName",
+					"capacity",
+					"currentNbPlayers",
+					"status",
+					"players"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ErrorResponse": {
+				"properties": {
+					"status": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					},
+					"reason": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"status",
+					"message",
+					"reason"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -82,6 +138,41 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/game/joinSession/{id}": {
+			"get": {
+				"operationId": "JoinSession",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/GameSessionDto"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorResponse"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
